# OpenCV-C-or-CPP-Projects

./: README.md
10_Object Detector/: CMakeLists.txt  main.cpp
11_Colored Object Tracker/: CMakeLists.txt  main.cpp
12_CamShift Object Tracker/: CMakeLists.txt  main.cpp
13_Harris Corner Object Tracker/: CMakeLists.txt  main.cpp
14_Lucas Kanade Object Tracker/: CMakeLists.txt  main.cpp
15_Farneback Object Tracker/: CMakeLists.txt  main.cpp
16_Good Feature Object Tracker/: CMakeLists.txt  main.cpp
17_Text Detector/: CMakeLists.txt  main.cpp
18_Text Recognition (OCR)/: CMakeLists.txt
19_Obect Detector with YOLO/: CMakeLists.txt  main.cpp
1_Read an Image/: CMakeLists.txt  main.cpp
20_Face Detector with SSD/: CMakeLists.txt  main.cpp
21_Face Pose Detector/: CMakeLists.txt  main.cpp
22_Number Plate Recognition/: CMakeLists.txt  main.cpp
23_Face Recognition/: CMakeLists.txt  detectObject.cpp  detectObject.h  main.cpp  preprocessFace.cpp  preprocessFace.h
2_Read WebCam/: CMakeLists.txt  main.cpp
3_Photo Tool/: CMakeLists.txt  main.cpp
4_Face Detector/: main.cpp
5_Ear Detector/: CMakeLists.txt  main.cpp
6_FaceMask Overlay/: CMakeLists.txt  main.cpp
7_Moustache Overlay/: CMakeLists.txt  main.cpp
8_Sunglasses Overlay/: CMakeLists.txt  main.cpp
9_Motion Detector/: CMakeLists.txt  main.cpp
Read an Image/: CMakeLists.txt  main.cpp
